# motifai

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  README.md  SESSION-2026-01-13.md  SESSION-2026-03-03.md  SESSION_SUMMARY_2024-12-28.md  agent_utilities  file_tree.txt  project-state.json  pyproject.toml  requirements.txt  santiago_test.md  setup.py  starthere.md  tmpclaude-4939-cwd
.cache/: santiago_consciousness.json
config/: tool_registry.yaml
data/: faiss_index.pkl  faiss_index_metadata.json
data/processed/: all_data_chunked.json
data/raw/: chapters.json
docs/: RESTRUCTURING_COMPLETE.md  SESSION_SUMMARY_2024-12-30.md  SETUP_COMPLETE.md  chapter-frontmatter-schema.md  character-roleplay-system-progress.md  claude-code-handoff.md  tool-architecture.md
examples/: README.md  basic_validation.py  compare_providers.py
scripts/: build_character_consciousness.py  demo_validate.py  get_character_state.py  migrate_chapters.py  query_chapters.py  update_word_counts.py  validate_chapters.py  verify_models.py
tests/: README.md  build_index.py  test2_build_index.py  test_FAISS_index_verification.py  test_build_index.py  test_build_index_chunking.py  test_chapter_template_reformat.py  test_chapters_json_validation.py  test_llm_tagging.py  test_making_sure_nltk_is_gone.py  test_metadata_main.py  test_nltk.py  test_openai_cost_calculator.py  test_parse_notes_test.py  test_punkt_test.py  test_retrieval_function.py  test_retrieval_utils.py  test_tag_matcher.py  test_tag_parser.py  tokenizer_test.py
(+52 files in other folders)
